Rename SemanticKernelFunction to KernelHttpServer (#25)
### Motivation and Context
The Semantic Kernel naming convention of Skills and Functions can cause
confusion with the naming of the Azure Function sample project.

### Description
This PR renames the api-azure-function folder and
SemanticKernelFunction.csproj file to `KernelHttpServer`. All references
have been updated to point to the new folder.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -128,13 +128,13 @@
       }
     },
     {
-      "label": "Run - Starter API Azure Function",
+      "label": "Run - Kernel HTTP Server",
       "command": "func",
       "type": "shell",
       "args": ["start", "--csharp"],
       "group": "test",
       "options": {
-        "cwd": "${workspaceFolder}/samples/starter-api-azure-function"
+        "cwd": "${workspaceFolder}/samples/dotnet/KernelHttpServer"
       },
       "presentation": {
         "reveal": "always",
