GitHub Actions Fixes, Cleanup (#64)
### Description
- markdown-link-check
  - currently failing due to string substitution rules
  - new: running on PR (only if md files changed)
- dotnet-ci and dotnet-pr
  - ignoring non-dotnet changes
- dotnet-integration-tests
  - running only when dotnet code changes

--- a/.github/workflows/markdown-link-check-config.json
+++ b/.github/workflows/markdown-link-check-config.json
@@ -3,13 +3,9 @@
     { "pattern": "/github/" },
     { "pattern": "./actions" },
     { "pattern": "./blob" },
-    { "pattern": "./issues" }
-  ],
-  "replacementPatterns": [
-    {
-      "pattern": "https://github.com/microsoft/semantic-kernel",
-      "replacement": "."
-    }
+    { "pattern": "./issues" },
+    { "pattern": "./discussions" },
+    { "pattern": "./pulls" }
   ],
   "timeout": "20s",
   "retryOn429": true,
