--- a/.github/workflows/node-pr.yml
+++ b/.github/workflows/node-pr.yml
@@ -1,9 +1,10 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js PR
+name: node-pr
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: ["main"]
     paths:
