--- a/.github/workflows/node-pr.yml
+++ b/.github/workflows/node-pr.yml
@@ -40,6 +40,6 @@ jobs:
           for lockfile in samples/**/yarn.lock; do # loop over all yarn.lock files
             dir=$(dirname "$lockfile") # get the directory of the lock file
             echo "Running yarn install and yarn build for $dir"
-            yarn -cwd "$dir" install --frozen-lockfile # install dependencies
-            yarn -cwd "$dir" build # run build script
+            yarn --cwd "$dir" install --frozen-lockfile # install dependencies
+            yarn --cwd "$dir" build # run build script
           done
