Sample readme updates + Ignoring .env files (#41)
### Motivation and Context

It is generally recommended to add .env files to .gitignore for public
repositories.

`.env` files often contain sensitive information such as access keys,
passwords, and other credentials that should not be shared publicly.
Including these files in the repository, could potentially lead to
security risks.

`launchSettings.json` was added and included as part of the ignore for
the same reasons above as it contains environment definitions which can
contain sensitive information.

Small `auth-api-webapp-react` sample readme improvements.
Add `lauchSettings.json` to `kernel-syntax-examples` sample.

### Description 

To avoid any problem I added `env.development` files with original
template content and added an extra step into the samples readme
following the same language used the first step in `graph-api-skills`
sample regarding the `appsettings.Development.json` file.

Improved `auth-api-webapp-react` readme and added a troubleshooting
section for clarity.

---------

Co-authored-by: Shawn Callegari <36091529+shawncal@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -409,7 +409,8 @@ FodyWeavers.xsd
 *.crt
 *.key
 
-
+.env
+launchSettings.json
 appsettings.development.json
 testsettings.development.json
 config.development.yaml
