Sample 4: Using memory and embeddings with GitHub (#94) (#96)
### Motivation and Context
This sample continues in the spirit of prior samples in the samples/apps
folder with a goal of teaching developers how the concepts of memory and
embeddings can be integrated.

### Description
This sample includes a frontend app that allows the developer to enter
the address of a publicly available Github repository, which is
downloaded to the temp directory of the machine hosting the
KernelHttpService sample application (can be the same machine).

Once downloaded the developer is able to have a conversation with the
repository and see the impact of the relevance slider on the responses.

---------

Co-authored-by: Craig Presti <146438+craigomatic@users.noreply.github.com>
Co-authored-by: teresaqhoang <125500434+teresaqhoang@users.noreply.github.com>
Co-authored-by: markwallace-microsoft <mark.e.wallace@outlook.com>
Co-authored-by: Tao Chen <TaoChenOSU@users.noreply.github.com>
Co-authored-by: Mark Wallace <127216156+markwallace-microsoft@users.noreply.github.com>
Co-authored-by: Devis Lucato <devis@microsoft.com>
Co-authored-by: Devis Lucato <dluc@users.noreply.github.com>
Co-authored-by: Adrian Bonar <56417140+adrianwyatt@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "prettier.enable": true,
-  "css.lint.validProperties": ["composes"],
+  "css.lint.validProperties": [
+    "composes"
+  ],
   "editor.defaultFormatter": "ms-dotnettools.csharp",
   "editor.formatOnType": true,
   "editor.formatOnSave": true,
@@ -8,14 +10,19 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
-  "[csharp]": { "editor.defaultFormatter": "ms-dotnettools.csharp" },
+  "[csharp]": {
+    "editor.defaultFormatter": "ms-dotnettools.csharp"
+  },
   "editor.bracketPairColorization.enabled": true,
   "editor.guides.bracketPairs": "active",
   "python.formatting.provider": "autopep8",
-  "python.formatting.autopep8Args": ["--max-line-length=120"],
+  "python.formatting.autopep8Args": [
+    "--max-line-length=120"
+  ],
   "notebook.output.textLineLimit": 500,
-  "python.analysis.extraPaths": ["./python/src"],
-
+  "python.analysis.extraPaths": [
+    "./python/src"
+  ],
   "javascript.updateImportsOnFileMove.enabled": "always",
   "search.exclude": {
     "**/node_modules": true,
@@ -54,7 +61,9 @@
     "overrideConfigFile": ".eslintrc.js"
   },
   "eslint.packageManager": "yarn",
-  "files.associations": { "*.json": "jsonc" },
+  "files.associations": {
+    "*.json": "jsonc"
+  },
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -62,5 +71,8 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true
-  }
+  },
+  "cSpell.words": [
+    "Partitioner"
+  ]
 }
