Integrate use of embeddings to determine related skills returned from FunctionView (#67)
### Motivation and Context

This pull request introduces several changes to the planner skill, which
is a core skill that allows users to create and execute plans based on
semantic queries. The motivation and context for these changes are as
follows:

- The changes improve the functionality and usability of the planner
skill by adding several parameters and options to the planner skill
functions, such as relevancy threshold, max functions, excluded
functions, excluded skills, and included functions. These parameters
allow users to customize the filtering and selection of registered
functions based on their goals and preferences.
- The changes enable the planner skill to filter the available functions
based on a semantic query and the relevance score from the memory
provider. This allows users to specify a natural language query that
matches their intent and get the most relevant functions to execute.
This feature enhances the planner skill's ability to generate and
execute plans that are relevant, efficient, and customizable for
different goals and scenarios.
- The changes improve the user experience of the kernel syntax examples
by adding more semantic skills and demonstrating how to use the planner
skill to create a plan for a complex task.

These changes do not fix any open issues, but they are related to the
ongoing development and improvement of the planner skill and the kernel
framework. They also improve the test coverage and code quality of the
planner skill, which is a key feature of the semantic kernel framework.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -136,6 +136,26 @@
       }
     },
     {
+      "label": "Test - Semantic-Kernel Integration (Code Coverage)",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "test",
+        "--collect",
+        "XPlat Code Coverage;Format=lcov",
+        "SemanticKernel.IntegrationTests.csproj"
+      ],
+      "problemMatcher": "$msCompile",
+      "group": "test",
+      "presentation": {
+        "reveal": "always",
+        "panel": "shared"
+      },
+      "options": {
+        "cwd": "${workspaceFolder}/dotnet/src/SemanticKernel.IntegrationTests/"
+      }
+    },
+    {
       "label": "Run - Kernel-Demo",
       "command": "dotnet",
       "type": "process",
