--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,7 +6,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "main", experimental ]
+    branches: [ "main", experimental, "feature*" ]
   schedule:
     - cron: '17 11 * * 2'
 
