added *.development.config and *.development.json to gitignore (#350)
### Description
Allows users to store secrets and other sensitive info locally and not checking it in by mistake

--- a/.gitignore
+++ b/.gitignore
@@ -412,9 +412,9 @@ FodyWeavers.xsd
 .env
 certs/
 launchSettings.json
-appsettings.development.json
-testsettings.development.json
 config.development.yaml
+*.development.config
+*.development.json
 .DS_Store
 .idea/
 node_modules/
