--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Auto-detect text files, ensure they use LF.
-* text=auto eol=lf
+* text=auto eol=lf working-tree-encoding=UTF-8
 
 # Bash scripts
 *.sh text eol=lf
