Update compliance.yml for Azure Pipelines

--- a/compliance.yml
+++ b/compliance.yml
@@ -17,10 +17,10 @@ steps:
     ErrorLevel: 'warn'
 
 - task: UseDotNet@2
-  displayName: 'Use .NET Core SDK 3.1'
+  displayName: 'Use .NET 6.0'
   inputs:
     packageType: 'sdk'
-    version: '3.1.x'
+    version: '6.x'
 
 - task: Semmle@1
   env: 
