Plan object execution capabilities (#389)
### Motivation and Context
This is the next PR in improving Planning capabilities in the Kernel. It
builds upon previous
https://github.com/microsoft/semantic-kernel/pull/255 to enable
execution of plans and improves the ability to create plans.

### Description
- Rename the Plan class to SKPlan and add support for invoking functions
as part of the plan execution.
- Add a new class for executing plans, and remove the unused PlanRunner
class.
- Add unit and integration tests for the planning functionality and a
test email skill.
- Fix some minor issues and add documentation and comments to the
planning classes and tests.
- Update the VS Code tasks and editor config files to improve the
development experience.

--- a/.editorconfig
+++ b/.editorconfig
@@ -249,7 +249,6 @@ csharp_style_prefer_top_level_statements = true:silent
 csharp_style_expression_bodied_lambdas = true:silent
 csharp_style_expression_bodied_local_functions = false:silent
 
-
 ##################
 # C# Style       #
 ##################
@@ -270,6 +269,13 @@ dotnet_diagnostic.IDE0080.severity = none # Remove unnecessary suppression opera
 dotnet_diagnostic.IDE0100.severity = none # Remove unnecessary equality operator
 dotnet_diagnostic.IDE0110.severity = none # Remove unnecessary discards
 
+# Disable select expression-level style rules
+[*.cs]
+dotnet_diagnostic.IDE0032.severity = none # Use auto property
+
+# Disable select language style rules
+[*.cs]
+dotnet_diagnostic.IDE0160.severity = none # Use block-scoped namespace
 
 ###############################
 # VB Coding Conventions       #
