--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "ms-dotnettools.csharp",
     "ms-dotnettools.dotnet-interactive-vscode",
     "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint"
+    "dbaeumer.vscode-eslint",
+    "ms-semantic-kernel.semantic-kernel"
   ]
 }
