--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,16 +1,39 @@
-name: Lint
-on: push
-# concurrency:
-#   group: lint-${{ github.ref }}
-#   cancel-in-progress: true
+name: Python Lint
+on:
+  workflow_dispatch:
+  pull_request:
+    branches: [ "main", "feature*" ]
 
 jobs:
+  paths-filter:
+    runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.filter.outputs.python}}
+    steps:
+    - uses: actions/checkout@v2
+    - uses: dorny/paths-filter@v2
+      id: filter
+      with:
+        filters: |
+          python:
+            - 'python/**'
+    # run only if 'python' files were changed
+    - name: python tests
+      if: steps.filter.outputs.python == 'true'
+      run: echo "Python file"
+    # run only if not 'python' files were changed
+    - name: not python tests
+      if: steps.filter.outputs.python != 'true'
+      run: echo "NOT python file"
+
   ruff:
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.8"]
     runs-on: ubuntu-latest
+    needs: paths-filter
+    if: needs.paths-filter.outputs.output1 == 'true'
     timeout-minutes: 5
     steps:
       - run: echo "/root/.local/bin" >> $GITHUB_PATH
@@ -32,6 +55,8 @@ jobs:
       matrix:
         python-version: ["3.8"]
     runs-on: ubuntu-latest
+    needs: paths-filter
+    if: needs.paths-filter.outputs.output1 == 'true'
     timeout-minutes: 5
     steps:
       - run: echo "/root/.local/bin" >> $GITHUB_PATH
