Simplify labeler rules for kernel label (#710)
This commit simplifies the labeler rules for the kernel label by using
the any and all operators instead of a list of patterns. This makes the
rules more readable and easier to maintain and ensures `kernel` label is
used as appropriate. The logic of the rules still exclude the
SemanticKernel and SemanticKernel.Abstractions projects from the kernel
label but will now include if only non-core kernel changes are made.

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,9 +1,8 @@
 # Add 'kernel' label to any change within the 'dotnet/src' that's not 'SemanticKernel' or 'SemanticKernel.Abstractions' directory
 kernel:
-  - any:
+  - any: ["dotnet/src/**/*", "dotnet/src/*"]
+  - all:
       [
-        "dotnet/src/**/*",
-        "dotnet/src/*",
         "!dotnet/src/SemanticKernel/*",
         "!dotnet/src/SemanticKernel/**/*",
         "!dotnet/src/SemanticKernel.Abstractions/*",
