--- a/java/api-test/pom.xml
+++ b/java/api-test/pom.xml
@@ -17,11 +17,6 @@
     <packaging>pom</packaging>
 
     <properties>
-        <jdk.version>17</jdk.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <maven.compiler.testSource>17</maven.compiler.testSource>
-        <maven.compiler.testTarget>17</maven.compiler.testTarget>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -41,5 +36,38 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <profiles>
+         <profile>
+            <id>compile-jdk8</id>
+            <properties>
+                <jdk.version>1.8</jdk.version>
+                <maven.compiler.source>1.8</maven.compiler.source>
+                <maven.compiler.target>1.8</maven.compiler.target>
+                <maven.compiler.testSource>1.8</maven.compiler.testSource>
+                <maven.compiler.testTarget>1.8</maven.compiler.testTarget>
+            </properties>
+        </profile>
+        <profile>
+            <id>compile-jdk11</id>
+            <properties>
+                <jdk.version>11</jdk.version>
+                <maven.compiler.source>11</maven.compiler.source>
+                <maven.compiler.target>11</maven.compiler.target>
+                <maven.compiler.testSource>11</maven.compiler.testSource>
+                <maven.compiler.testTarget>11</maven.compiler.testTarget>
+            </properties>
+        </profile>
+        <profile>
+            <id>compile-jdk17</id>
+            <properties>
+                <jdk.version>17</jdk.version>
+                <maven.compiler.source>17</maven.compiler.source>
+                <maven.compiler.target>17</maven.compiler.target>
+                <maven.compiler.testSource>17</maven.compiler.testSource>
+                <maven.compiler.testTarget>17</maven.compiler.testTarget>
+            </properties>
+        </profile>
+    </profiles>
 
 </project>
