--- a/samples/java/semantickernel-samples/pom.xml
+++ b/samples/java/semantickernel-samples/pom.xml
@@ -9,6 +9,9 @@
     <version>0.2.0-SNAPSHOT</version>
 
     <properties>
+        <jdk.version>17</jdk.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -71,27 +74,4 @@
         </dependency>
     </dependencies>
 
-    <profiles>
-         <profile>
-            <id>compile-jdk8</id>
-            <properties>
-                <maven.compiler.source>1.8</maven.compiler.source>
-                <maven.compiler.target>1.8</maven.compiler.target>
-            </properties>
-        </profile>
-        <profile>
-            <id>compile-jdk11</id>
-            <properties>
-                <maven.compiler.source>11</maven.compiler.source>
-                <maven.compiler.target>11</maven.compiler.target>
-            </properties>
-        </profile>
-        <profile>
-            <id>compile-jdk17</id>
-            <properties>
-                <maven.compiler.source>17</maven.compiler.source>
-                <maven.compiler.target>17</maven.compiler.target>
-            </properties>
-        </profile>
-    </profiles>
 </project>
