--- a/java/samples/pom.xml
+++ b/java/samples/pom.xml
@@ -19,6 +19,9 @@
         <log4j2.version>2.20.0</log4j2.version>
         <maven.compiler-plugin.version>3.11.0</maven.compiler-plugin.version>
         <maven.compiler.release>17</maven.compiler.release>
+        <jdk.version>17</jdk.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
@@ -87,6 +90,11 @@
         <dependency>
             <groupId>com.microsoft.semantickernel.extensions</groupId>
             <artifactId>sequentialplanner-extensions</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.semantickernel.extensions</groupId>
+            <artifactId>actionplanner-extension</artifactId>
             <scope>compile</scope>
         </dependency>
     </dependencies>
