--- a/java/semantickernel-bom/pom.xml
+++ b/java/semantickernel-bom/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.microsoft.semantickernel</groupId>
     <artifactId>semantickernel-bom</artifactId>
-    <version>0.1.6-SNAPSHOT</version>
+    <version>0.1.6</version>
     <packaging>pom</packaging>
 
     <name>Semantic Kernel Java BOM</name>
@@ -107,6 +107,6 @@
         <url>https://github.com/microsoft/semantic-kernel</url>
         <connection>scm:git:https://github.com/microsoft/semantic-kernel.git</connection>
         <developerConnection>scm:git:https://github.com/microsoft/semantic-kernel.git</developerConnection>
-        <tag>semantickernel-parent-0.1.2-beta</tag>
+        <tag>semantickernel-parent-0.1.6</tag>
     </scm>
 </project>
