--- a/java/semantickernel-connectors-parent/semantickernel-connectors/pom.xml
+++ b/java/semantickernel-connectors-parent/semantickernel-connectors/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.microsoft.semantickernel.connectors</groupId>
         <artifactId>semantickernel-connectors-parent</artifactId>
-        <version>0.1.6-SNAPSHOT</version>
+        <version>0.1.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
