--- a/java/semantickernel-extensions-parent/actionplanner-extension/pom.xml
+++ b/java/semantickernel-extensions-parent/actionplanner-extension/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.microsoft.semantickernel.extensions</groupId>
         <artifactId>semantickernel-extensions-parent</artifactId>
-        <version>0.1.6-SNAPSHOT</version>
+        <version>0.1.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
