Add web search connector. Fix embedding being generated even if the db entry already exists

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -78,6 +78,7 @@
         <module>semantickernel-core</module>
         <module>connectors/semantickernel-connectors-memory-jdbc</module>
         <module>connectors/semantickernel-connectors-memory-postgresql</module>
+        <module>connectors/semantickernel-connectors-websearch</module>
     </modules>
 
     <dependencyManagement>
