--- a/java/samples/semantickernel-concepts/semantickernel-syntax-examples/pom.xml
+++ b/java/samples/semantickernel-concepts/semantickernel-syntax-examples/pom.xml
@@ -34,6 +34,11 @@
             <groupId>com.microsoft.semantic-kernel</groupId>
             <artifactId>semantickernel-aiservices-huggingface</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.semantic-kernel</groupId>
+            <artifactId>semantickernel-openapi-plugin</artifactId>
+            <version>1.1.5-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
